implement real Modrinth file mapping